Fixed the css on mobile and showing tags now

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,15 +1,16 @@
 .main {
-	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-evenly;
 	box-sizing: border-box;	
+	min-height: 100vh;
+	min-height: -webkit-fill-available;
+	padding: 2.5em;
 
 	h1 {
 		font-weight: 100 !important;
 		white-space: nowrap;
-		margin: 2em;
 	}
 
 	& > .navigation {
@@ -23,10 +24,10 @@
 
 .logo {
 	
-	height: 50vh;
+	flex-basis: 50vh;
 
 	@media screen and (max-width: 900px) {
-		transform: scale(0.6);
+		flex-basis: 30vh;
 	}
 
 }
