--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,14 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 
+body > div {
+	height: 100%;
+}
+
+#gatsby-focus-wrapper {
+	height: 100%;
+}
+
 html {
 	background-color: $base-color;
 	color: $front-color;
@@ -12,6 +20,7 @@ html {
 		margin: 0;
 		padding: 0;
 		height: 100%;
+		min-height: -webkit-fill-available;
 	}
 
 	a {
